# ChatbotFactory

./: .env.example  .replit  Procfile  README.md  add_indices.py  ai.py  app.py  audio_processor.py  auth.py  bot_manager.py  bot_status.py  celery_app.py  celery_worker.py  config.py  cookies.txt  gunicorn_config.py  instagram_bot.py  logging_config.py  main.py  marketing.py  migrations.py  models.py  notification_service.py  payments.py  performance_test.py  pyproject.toml  redis_cache.py  render.yaml  replit.md  requirements.txt  routes.py  scheduler.py  tasks.py  telegram_bot.py  telegram_bot_async.py  utils.py  whatsapp_bot.py
attached_assets/: Pasted--AI-Prompt-BotFactory-AI-Chatbot-Platformasi-O-zbek-tilida-Siz-tajribali-Python-Flask-dastur-1756723158521_1756723158522.txt  Pasted--BotFactory-AI-Umumiy-Test-Natijalari-va-Qilinishi-Kerak-Ishlar-ISHLAYDIGAN-QISMLAR-Backend-1756888059192_1756888059192.txt  Pasted--File-opt-render-project-src-venv-lib-python3-13-site-packages-sqlalchemy-pool-base-py-line-89-1758165380357_1758165380359.txt  Pasted--Men-yaratgan-BotFactory-AI-Platformasida-Instagram-va-WhatsApp-botlar-ishlamayapti-Iltimos-quyida-1756737099842_1756737099842.txt  Pasted--Siz-yuqoridagi-BotFactory-AI-Chatbot-Platformasi-loyihasini-100-gacha-olib-chiqishingiz-kerak-Hoz-1756726346512_1756726346513.txt  Pasted--Siz-yuqoridagi-BotFactory-AI-Platformasi-loyihasini-100-gacha-olib-chiqishingiz-kerak-Hozirgi-hol-1756728928294_1756728928294.txt  (+8 more)
instance/: botfactory.db
static/: manifest.json  sw.js
templates/: admin.html  base.html  bot_create.html  bot_edit.html  (+7 more)
(+3 files in other folders)
